--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div>
               <a class="image" style="background: url('images/team/jeff.jpg')"></a>
               <span>
-                <h3>Jeffrey Evans</h3>
+                <h3>Jeffrey Thomas</h3>
                 <figcaption>Painting</figcaption>
               </span>
             </div>
