--- a/index.html
+++ b/index.html
@@ -408,6 +408,8 @@
                 <h2>Contact Details</h2>
                 <h3>Email</h3>
                 <a class="link" href="mailto:info@dafentradepark.co.uk">info@dafentradepark.co.uk</a>
+                <h3>Twitter</h3>
+                <a target="_blank" class="link" href="https://twitter.com/dafentradepark">@dafentradepark</a>
                 <h3>Robert Rees (Rees Group)</h3>
                 <a class="link" href="tel:07971 176777">07971 176777</a>
                 <h3>Jason Thorne (LSH)</h3>
