Updated footer text.

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             </span>
           </div>
           <div class="text-container">
-            <p class="footer-text">Copyright <a href="http://rees.co.uk">Rees Group</a> 2015 | All Rights Reserved | Site by Merged Design</p>
+            <p class="footer-text">Copyright <a href="http://rees.co.uk">Rees Group</a> 2015 | All Rights Reserved | Site by Merged</p>
           </div>
         </footer>
 
