Stopped menu button from adding hash to URL.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1 class="logo"><a data-scroll href="#">Dafen Trade Park</a></h1>
       </span>
       <span>
-        <a id="menu-button" href="#">Menu</a>
+        <a id="menu-button">Menu</a>
       </span>
     </div>
 
