--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <div class="text-container">
                 <h2>On Arrival</h2>
                 <p>
-                  When we first arrived on the site, it was clear that this was going to be a large project. Set in approximately 2.7 acres of land,
+                  On first arrival, it was clear that this was going to be a large project. Set in approximately 2.7 acres of land,
                   with a footprint of around 35,000 square feet, the derelict factory seemed to be never ending.
                   We began working on site almost immediately after
                   the documents had been signed and the progress that our team made within the first few weeks was astonishing.
