Added an availability section to the site.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <ul class="list--site-navigation">
               <li><a data-scroll href="#about">About</a></li>
               <li><a data-scroll href="#story">Story</a></li>
+              <li><a data-scroll href="#availability">Availability</a></li>
               <li><a data-scroll href="#gallery">Gallery</a></li>
               <li><a data-scroll href="#team">Team</a></li>
               <li><a data-scroll href="#contact">Contact</a></li>
@@ -60,6 +61,7 @@
 
         <!-- About Section -->
         <section id="about" class="width-100">
+
           <div class="max-width">
             <div class="text-container">
               <p>
@@ -71,6 +73,7 @@
               </p>
             </div>
           </div>
+
           <div class="bullet-container width-100">
             <span>
               <h3>281, 000</h3>
@@ -93,6 +96,7 @@
               <p>units available for lease.</p>
             </span>
           </div>
+
         </section>
 
         <!-- The Story -->
@@ -171,6 +175,76 @@
             </div>
           </div>
 
+        </section>
+
+        <!-- Availability -->
+
+        <section id="availability" class="width-100">
+
+          <div class="max-width">
+            <div class="text-container">
+              <div class="availability-image" style="background: url('images/story/proposed-floor-plan-outline.png');"></div>
+              <h1>Unit Availability</h1>
+              <ul>
+                <li>
+                  <h4>Unit 01</h4>
+                  <span>220m<sup>2</sup> / 2368 sq ft</span>
+                  <span class="status available">Available</span>
+                </li>
+                <li>
+                  <h4>Unit 02</h4>
+                  <span>255m<sup>2</sup> / 2745 sq ft</span>
+                  <span class="status available">Available</span>
+                </li>
+                <li>
+                  <h4>Unit 03</h4>
+                  <span>360m<sup>2</sup> / 3875 sq ft</span>
+                  <span class="status available">Available</span>
+                </li>
+                <li>
+                  <h4>Unit 04</h4>
+                  <span>240m<sup>2</sup> / 2580 sq ft</span>
+                  <span class="status available">Available</span>
+                </li>
+                <li>
+                  <h4>Unit 05</h4>
+                  <span>315m<sup>2</sup> / 3390 sq ft</span>
+                  <span class="status unavailable">Unavailable</span>
+                </li>
+                <li>
+                  <h4>Unit 06</h4>
+                  <span>305m<sup>2</sup> / 3280 sq ft</span>
+                  <span class="status unavailable">Unavailable</span>
+                </li>
+                <li>
+                  <h4>Unit 07</h4>
+                  <span>465m<sup>2</sup> / 5005 sq ft</span>
+                  <span class="status available">Available</span>
+                </li>
+                <li>
+                  <h4>Unit 08</h4>
+                  <span>325m<sup>2</sup> / 3500 sq ft</span>
+                  <span class="status available">Available</span>
+                </li>
+                <li>
+                  <h4>Unit 09</h4>
+                  <span>295m<sup>2</sup> / 3175 sq ft</span>
+                  <span class="status available">Available</span>
+                </li>
+                <li>
+                  <h4>Unit 10</h4>
+                  <span>295m<sup>2</sup> / 3175 sq ft</span>
+                  <span class="status available">Available</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+        </section>
+
+        <!-- The Gallery -->
+        <section id="gallery" class="width-100">
+
           <div class="dual-pane-container">
             <div class="width-50">
               <div class="dual-pane-image" style="background: url('images/story/proposed-floor-plan.jpg')"></div>
@@ -179,11 +253,6 @@
               <div class="dual-pane-image" style="background: url('images/story/merlo-on-site.jpg')"></div>
             </div>
           </div>
-
-        </section>
-
-        <!-- The Gallery -->
-        <section id="gallery" class="width-100">
 
           <div class="max-width">
             <div class="text-container margin-bottom-100">
@@ -447,6 +516,9 @@
             </span>
             <span>
               <h4><a data-scroll class="link" href="#story">Story</a></h4>
+            </span>
+            <span>
+              <h4><a data-scroll class="link" href="#availability">Availability</a></h4>
             </span>
             <span>
               <h4><a data-scroll class="link" href="#gallery">Gallery</a></h4>
