Moved gallery anchor.

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         </section>
 
         <!-- The Gallery -->
-        <section id="gallery" class="width-100">
+        <section class="width-100">
 
           <div class="dual-pane-container">
             <div class="width-50">
@@ -254,7 +254,7 @@
             </div>
           </div>
 
-          <div class="max-width">
+          <div id="gallery" class="max-width">
             <div class="text-container margin-bottom-100">
               <h1>The Gallery</h1>
               <p>
