Changed availability colour and unavailability text.

--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
                 <li>
                   <h4>Unit 05</h4>
                   <span>315m<sup>2</sup> / 3390 sq ft</span>
-                  <span class="status unavailable">Unavailable</span>
+                  <span class="status unavailable">Let</span>
                 </li>
                 <li>
                   <h4>Unit 06</h4>
                   <span>305m<sup>2</sup> / 3280 sq ft</span>
-                  <span class="status unavailable">Unavailable</span>
+                  <span class="status unavailable">Let</span>
                 </li>
                 <li>
                   <h4>Unit 07</h4>
