Added a 404 error page.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
 
+    <!-- Navigation -->
     <nav role="navigation" id='navigation' class="navigation closed">
 
         <div>
