--- a/404.html
+++ b/404.html
@@ -126,7 +126,7 @@
             <h4><a class="link" href="/#about">About</a></h4>
           </span>
           <span>
-            <h4><a class="link" href="#story">Story</a></h4>
+            <h4><a class="link" href="/#story">Story</a></h4>
           </span>
           <span>
             <h4><a class="link" href="/#availability">Availability</a></h4>
