Added Titles to all links and to team images.

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <nav role="navigation" id='navigation' class="navigation closed">
 
         <div>
-          <h1 class="logo"><a data-scroll href="#">Dafen Trade Park</a></h1>
+          <h1 class="logo"><a title="Dafen Trade Park" data-scroll href="#">Dafen Trade Park</a></h1>
         </div>
         <div>
             <ul class="list--site-navigation">
-              <li><a data-scroll href="#about">About</a></li>
-              <li><a data-scroll href="#story">Story</a></li>
-              <li><a data-scroll href="#availability">Availability</a></li>
-              <li><a data-scroll href="#gallery">Gallery</a></li>
-              <li><a data-scroll href="#team">Team</a></li>
-              <li><a data-scroll href="#contact">Contact</a></li>
+              <li><a title="About" data-scroll href="#about">About</a></li>
+              <li><a title="Story" data-scroll href="#story">Story</a></li>
+              <li><a title="Availability" data-scroll href="#availability">Availability</a></li>
+              <li><a title="Gallery" data-scroll href="#gallery">Gallery</a></li>
+              <li><a title="Team" data-scroll href="#team">Team</a></li>
+              <li><a title="Contact" data-scroll href="#contact">Contact</a></li>
             </ul>
         </div>
         <span id="close-menu-button">&times;</span>
@@ -41,7 +41,7 @@
 
     <div id='responsive-nav' class="responsive-nav">
       <span>
-        <h1 class="logo"><a data-scroll href="#">Dafen Trade Park</a></h1>
+        <h1 class="logo"><a title="Dafen Trade Park" data-scroll href="#">Dafen Trade Park</a></h1>
       </span>
       <span>
         <a id="menu-button">Menu</a>
@@ -55,7 +55,7 @@
           <div class="header-image" style="background: url('images/header/dafen-trade-park-after.jpg')">
             <div class="container">
               <h1>Every great story starts with a strong foundation.</h1>
-              <a data-scroll class="button--start-yours" href="#contact">Start Yours Today</a>
+              <a title="Start Yours Today" data-scroll class="button--start-yours" href="#contact">Start Yours Today</a>
             </div>
           </div>
         </section>
@@ -272,9 +272,9 @@
               <div class="gallery-container">
                 <div id="before-indoor-gallery" class="image float-right" style="background: url('images/gallery/indoors/dafen-park-indoors-05.jpg')">
                   <div class="controls">
-                    <span data-action="prev-image" class="left width-50 no-selection">&lsaquo;</span>
-                    <span data-action="next-image" class="right width-50 no-selection">&rsaquo;</span>
-                    <span data-display="image-count" class="count no-selection">1</span>
+                    <span title="Previous" data-action="prev-image" class="left width-50 no-selection">&lsaquo;</span>
+                    <span title="Next" data-action="next-image" class="right width-50 no-selection">&rsaquo;</span>
+                    <span title="Next" data-display="image-count" class="count no-selection">1</span>
                   </div>
                   <span class="gallery-title">Indoors Before</span>
                 </div>
@@ -287,9 +287,9 @@
               <div class="gallery-container">
                 <div id="before-outdoor-gallery" class="image float-left" style="background: url('images/gallery/outdoors/dafen-park-outdoors-11.jpg')">
                   <div class="controls">
-                    <span data-action="prev-image" class="left width-50 no-selection">&lsaquo;</span>
-                    <span data-action="next-image" class="right width-50 no-selection">&rsaquo;</span>
-                    <span data-display="image-count" class="count no-selection">1</span>
+                    <span title="Previous" data-action="prev-image" class="left width-50 no-selection">&lsaquo;</span>
+                    <span title="Next" data-action="next-image" class="right width-50 no-selection">&rsaquo;</span>
+                    <span title="Next" data-display="image-count" class="count no-selection">1</span>
                   </div>
                   <span class="gallery-title">Outdoors Before</span>
                 </div>
@@ -307,9 +307,9 @@
               <div class="gallery-container">
                 <div id="after-indoor-gallery" class="image float-right" style="background: url('images/gallery/dafen-park-indoors-14.jpg')">
                   <div class="controls">
-                    <span data-action="prev-image" class="left width-50 no-selection">&lsaquo;</span>
-                    <span data-action="next-image" class="right width-50 no-selection">&rsaquo;</span>
-                    <span data-display="image-count" class="count no-selection">1</span>
+                    <span title="Previous" data-action="prev-image" class="left width-50 no-selection">&lsaquo;</span>
+                    <span title="Next" data-action="next-image" class="right width-50 no-selection">&rsaquo;</span>
+                    <span title="Next" data-display="image-count" class="count no-selection">1</span>
                   </div>
                   <span class="gallery-title">Indoors After</span>
                 </div>
@@ -323,9 +323,9 @@
               <div class="gallery-container">
                 <div id="after-outdoor-gallery" class="image float-left" style="background: url('images/gallery/outdoors/dafen-park-outdoors-11.jpg')">
                   <div class="controls">
-                    <span data-action="prev-image" class="left width-50 no-selection">&lsaquo;</span>
-                    <span data-action="next-image" class="right width-50 no-selection">&rsaquo;</span>
-                    <span data-display="image-count" class="count no-selection">1</span>
+                    <span title="Previous" data-action="prev-image" class="left width-50 no-selection">&lsaquo;</span>
+                    <span title="Next" data-action="next-image" class="right width-50 no-selection">&rsaquo;</span>
+                    <span title="Next" data-display="image-count" class="count no-selection">1</span>
                   </div>
                   <span class="gallery-title">Outdoors After</span>
                 </div>
@@ -353,28 +353,28 @@
 
           <div class="image-grid-container width-100 margin-top-100">
             <div>
-              <a class="image" style="background: url('images/team/rob.jpg')"></a>
+              <a title="Robert Rees" class="image" style="background: url('images/team/rob.jpg')"></a>
               <span>
                 <h3>Robert Rees</h3>
                 <figcaption>Managing Director</figcaption>
               </span>
             </div>
             <div>
-              <a class="image" style="background: url('images/team/morton.jpg')"></a>
+              <a title="Morton Rees" class="image" style="background: url('images/team/morton.jpg')"></a>
               <span>
                 <h3>Morton Rees</h3>
                 <figcaption>Site Director</figcaption>
               </span>
             </div>
             <div>
-              <a class="image" style="background: url('images/team/phil.jpg')"></a>
+              <a title="Phil Beynon" class="image" style="background: url('images/team/phil.jpg')"></a>
               <span>
                 <h3>Phil Beynon</h3>
                 <figcaption>Groundworks</figcaption>
               </span>
             </div>
             <div>
-              <a class="image" style="background: url('images/team/josh.jpg')"></a>
+              <a title="Joshua Thomas" class="image" style="background: url('images/team/josh.jpg')"></a>
               <span>
                 <h3>Joshua Thomas</h3>
                 <figcaption>Carpentry</figcaption>
@@ -384,28 +384,28 @@
 
           <div class="image-grid-container width-100">
             <div>
-              <a class="image" style="background: url('images/team/dafs.jpg')"></a>
+              <a title="Dafydd Lewis" class="image" style="background: url('images/team/dafs.jpg')"></a>
               <span>
                 <h3>Dafydd Lewis</h3>
                 <figcaption>Bricklaying</figcaption>
               </span>
             </div>
             <div>
-              <a class="image" style="background: url('images/team/marek.jpg')"></a>
+              <a title="Marek Ciecwierski" class="image" style="background: url('images/team/marek.jpg')"></a>
               <span>
                 <h3>Marek Ciecwierski</h3>
                 <figcaption>Plastering</figcaption>
               </span>
             </div>
             <div>
-              <a class="image" style="background: url('images/team/kev.jpg')"></a>
+              <a title="Kevin Pearce" class="image" style="background: url('images/team/kev.jpg')"></a>
               <span>
                 <h3>Kevin Pearce</h3>
                 <figcaption>Electricals</figcaption>
               </span>
             </div>
             <div>
-              <a class="image" style="background: url('images/team/paul.jpg')"></a>
+              <a title="Paul Davies" class="image" style="background: url('images/team/paul.jpg')"></a>
               <span>
                 <h3>Paul Davies</h3>
                 <figcaption>Electricals</figcaption>
@@ -415,28 +415,28 @@
 
           <div class="image-grid-container width-100">
             <div>
-              <a class="image" style="background: url('images/team/jeff.jpg')"></a>
+              <a title="Jeffrey Thomas" class="image" style="background: url('images/team/jeff.jpg')"></a>
               <span>
                 <h3>Jeffrey Thomas</h3>
                 <figcaption>Painting</figcaption>
               </span>
             </div>
             <div>
-              <a class="image" style="background: url('images/team/myles.jpg')"></a>
+              <a title="Myles Thomas" class="image" style="background: url('images/team/myles.jpg')"></a>
               <span>
                 <h3>Myles Thomas</h3>
                 <figcaption>Groundworks</figcaption>
               </span>
             </div>
             <div>
-              <a class="image" style="background: url('images/team/calvin.jpg')"></a>
+              <a title="Calvin Jenkins" class="image" style="background: url('images/team/calvin.jpg')"></a>
               <span>
                 <h3>Calvin Jenkins</h3>
                 <figcaption>Groundworks</figcaption>
               </span>
             </div>
             <div>
-              <a class="image" style="background: url('images/team/jakub.jpg')"></a>
+              <a title="Jakub Wroblewicz" class="image" style="background: url('images/team/jakub.jpg')"></a>
               <span>
                 <h3>Jakub Wroblewicz</h3>
                 <figcaption>Labourer</figcaption>
@@ -477,13 +477,13 @@
               <div class="text-container">
                 <h2>Contact Details</h2>
                 <h3>Email</h3>
-                <a class="link" href="mailto:info@dafentradepark.co.uk">info@dafentradepark.co.uk</a>
+                <a title="Email Address" class="link" href="mailto:info@dafentradepark.co.uk">info@dafentradepark.co.uk</a>
                 <h3>Twitter</h3>
-                <a target="_blank" class="link" href="https://twitter.com/dafentradepark">@dafentradepark</a>
+                <a title="Twitter" target="_blank" class="link" href="https://twitter.com/dafentradepark">@dafentradepark</a>
                 <h3>Robert Rees (Rees Group)</h3>
-                <a class="link" href="tel:07971 176777">07971 176777</a>
+                <a title="Call Robert" class="link" href="tel:07971 176777">07971 176777</a>
                 <h3>Jason Thorne (LSH)</h3>
-                <a class="link" href="tel:01792 487256">01792 487256</a>
+                <a title="Call Jason" class="link" href="tel:01792 487256">01792 487256</a>
               </div>
             </div>
             <div class="width-25">
@@ -502,7 +502,7 @@
                 <br>
                 SA14 8NA
                 </p>
-                <a class="link" target="_blank" href="https://www.google.co.uk/maps/place/Llanelli,+Carmarthenshire+SA14+8NA/@51.6895993,-4.1241753,18z/data=!3m1!4b1!4m2!3m1!1s0x486ef2069f64d16f:0xe61dbb4edaa72f49?hl=en">Google Maps</a>
+                <a title="Google Maps" class="link" target="_blank" href="https://www.google.co.uk/maps/place/Llanelli,+Carmarthenshire+SA14+8NA/@51.6895993,-4.1241753,18z/data=!3m1!4b1!4m2!3m1!1s0x486ef2069f64d16f:0xe61dbb4edaa72f49?hl=en">Google Maps</a>
               </div>
             </div>
           </div>
@@ -513,22 +513,22 @@
         <footer class="site-footer">
           <div class="bullet-container width-100">
             <span style="border:none;">
-              <h4><a data-scroll class="link" href="#about">About</a></h4>
+              <h4><a title="About" data-scroll class="link" href="#about">About</a></h4>
             </span>
             <span>
-              <h4><a data-scroll class="link" href="#story">Story</a></h4>
+              <h4><a title="Story" data-scroll class="link" href="#story">Story</a></h4>
             </span>
             <span>
-              <h4><a data-scroll class="link" href="#availability">Availability</a></h4>
+              <h4><a title="Availability" data-scroll class="link" href="#availability">Availability</a></h4>
             </span>
             <span>
-              <h4><a data-scroll class="link" href="#gallery">Gallery</a></h4>
+              <h4><a title="Gallery" data-scroll class="link" href="#gallery">Gallery</a></h4>
             </span>
             <span>
-              <h4><a data-scroll class="link" href="#team">Team</a></h4>
+              <h4><a title="Team" data-scroll class="link" href="#team">Team</a></h4>
             </span>
             <span>
-              <h4><a data-scroll class="link" href="#contact">Contact</a></h4>
+              <h4><a title="Contact" data-scroll class="link" href="#contact">Contact</a></h4>
             </span>
           </div>
           <div class="text-container">
