Added title tags.

--- a/index.html
+++ b/index.html
@@ -184,58 +184,58 @@
 
           <div class="max-width">
             <div class="text-container">
-              <div class="availability-image" style="background: url('images/story/proposed-floor-plan-outline.png');"></div>
+              <div title="Floor Plan" class="availability-image" style="background: url('images/story/proposed-floor-plan-outline.png');"></div>
               <h1>Unit Availability</h1>
               <ul>
                 <li>
                   <h4>Unit 01</h4>
                   <span>220m<sup>2</sup> / 2368 sq ft</span>
-                  <span class="status available">Available</span>
+                  <span class="status available" title="Available">Available</span>
                 </li>
                 <li>
                   <h4>Unit 02</h4>
                   <span>255m<sup>2</sup> / 2745 sq ft</span>
-                  <span class="status available">Available</span>
+                  <span class="status available" title="Available">Available</span>
                 </li>
                 <li>
                   <h4>Unit 03</h4>
                   <span>360m<sup>2</sup> / 3875 sq ft</span>
-                  <span class="status available">Available</span>
+                  <span class="status available" title="Available">Available</span>
                 </li>
                 <li>
                   <h4>Unit 04</h4>
                   <span>240m<sup>2</sup> / 2580 sq ft</span>
-                  <span class="status available">Available</span>
+                  <span class="status available" title="Available">Available</span>
                 </li>
                 <li>
                   <h4>Unit 05</h4>
                   <span>315m<sup>2</sup> / 3390 sq ft</span>
-                  <span class="status unavailable">Let</span>
+                  <span class="status unavailable" title="Let">Let</span>
                 </li>
                 <li>
                   <h4>Unit 06</h4>
                   <span>305m<sup>2</sup> / 3280 sq ft</span>
-                  <span class="status unavailable">Let</span>
+                  <span class="status unavailable" title="Let">Let</span>
                 </li>
                 <li>
                   <h4>Unit 07</h4>
                   <span>465m<sup>2</sup> / 5005 sq ft</span>
-                  <span class="status available">Available</span>
+                  <span class="status available" title="Available">Available</span>
                 </li>
                 <li>
                   <h4>Unit 08</h4>
                   <span>325m<sup>2</sup> / 3500 sq ft</span>
-                  <span class="status available">Available</span>
+                  <span class="status available" title="Available">Available</span>
                 </li>
                 <li>
                   <h4>Unit 09</h4>
                   <span>295m<sup>2</sup> / 3175 sq ft</span>
-                  <span class="status available">Available</span>
+                  <span class="status available" title="Available">Available</span>
                 </li>
                 <li>
                   <h4>Unit 10</h4>
                   <span>295m<sup>2</sup> / 3175 sq ft</span>
-                  <span class="status available">Available</span>
+                  <span class="status available" title="Available">Available</span>
                 </li>
               </ul>
             </div>
