Updated gallery code to include new indoor images.

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <!-- Indoors Before -->
             <div class="width-50">
               <div class="gallery-container">
-                <div id="before-indoor-gallery" class="image float-right" style="background: url('images/gallery/indoors/dafen-park-indoors-05.jpg')">
+                <div id="before-indoor-gallery" class="image float-right" style="background: url('images/gallery/indoors/01.jpeg')">
                   <div class="controls">
                     <span title="Previous" data-action="prev-image" class="left width-50 no-selection">&lsaquo;</span>
                     <span title="Next" data-action="next-image" class="right width-50 no-selection">&rsaquo;</span>
