Changed the logo link to link back to root rather than scroll to top.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav role="navigation" id='navigation' class="navigation closed">
 
         <div>
-          <h1 class="logo"><a title="Dafen Trade Park" data-scroll href="#">Dafen Trade Park</a></h1>
+          <h1 class="logo"><a title="Dafen Trade Park" data-scroll href="/">Dafen Trade Park</a></h1>
         </div>
         <div>
             <ul class="list--site-navigation">
@@ -52,7 +52,7 @@
 
     <div id='responsive-nav' class="responsive-nav">
       <span>
-        <h1 class="logo"><a title="Dafen Trade Park" data-scroll href="#">Dafen Trade Park</a></h1>
+        <h1 class="logo"><a title="Dafen Trade Park" data-scroll href="/">Dafen Trade Park</a></h1>
       </span>
       <span>
         <a id="menu-button">Menu</a>
