Updated team photographs with new additions.

--- a/index.html
+++ b/index.html
@@ -455,6 +455,37 @@
             </div>
           </div>
 
+          <div class="image-grid-container width-100">
+            <div>
+              <a title="Darivsz Knach" class="image" style="background: url('images/team/darek.jpg')"></a>
+              <span>
+                <h3>Darivsz Knach</h3>
+                <figcaption>Painting</figcaption>
+              </span>
+            </div>
+            <div>
+              <a title="Tim Gower" class="image" style="background: url('images/team/tim.jpg')"></a>
+              <span>
+                <h3>Tim Gower</h3>
+                <figcaption>Plumbing</figcaption>
+              </span>
+            </div>
+            <div>
+              <a title="Paul Cummins" class="image" style="background: url('images/team/paul-cummins.jpg')"></a>
+              <span>
+                <h3>Paul Cummins</h3>
+                <figcaption>Plumbing</figcaption>
+              </span>
+            </div>
+            <div>
+              <a title="Justin Duggan" class="image" style="background: url('images/team/justin.jpg')"></a>
+              <span>
+                <h3>Justin Duggan</h3>
+                <figcaption>Plumbing</figcaption>
+              </span>
+            </div>
+          </div>
+
         </section>
 
         <!-- Contact Section -->
