Changed the header image.

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
         <!-- Header Section -->
         <section class="width-100">
-          <div class="header-image" style="background: url('images/header/dafen-trade-park-after.jpg')">
+          <div class="header-image" style="background: url('images/header/dafen-trade-park-front.jpg')">
             <div class="container">
-              <h1>Every great story starts with a strong foundation.</h1>
+              <h1>Every great story starts with a strong foundation</h1>
               <a title="Start Yours Today" data-scroll class="button--start-yours" href="#contact">Start Yours Today</a>
             </div>
           </div>
