Updated one of the story images.

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
           <div class="dual-pane-container">
             <div class="width-50">
-              <div class="dual-pane-image" style="background: url('images/story/proposed-floor-plan.jpg')"></div>
+              <div class="dual-pane-image" style="background: url('images/story/left-side.jpg')"></div>
             </div>
             <div class="width-50">
               <div class="dual-pane-image" style="background: url('images/story/merlo-on-site.jpg')"></div>
