Changed unit availability.

--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@
                 <li>
                   <h4>Unit 03</h4>
                   <span>360m<sup>2</sup> / 3875 sq ft</span>
-                  <span class="status available" title="Available">Available</span>
+                  <span class="status unavailable" title="Let">Let</span>
                 </li>
                 <li>
                   <h4>Unit 04</h4>
                   <span>240m<sup>2</sup> / 2580 sq ft</span>
-                  <span class="status available" title="Available">Available</span>
+                  <span class="status unavailable" title="Under Offer">Under Offer</span>
                 </li>
                 <li>
                   <h4>Unit 05</h4>
