Updates to unit availability.

--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
                 <li>
                   <h4>Unit 01</h4>
                   <span>220m<sup>2</sup> / 2368 sq ft</span>
-                  <span class="status unavailable" title="Available">Under Offer</span>
+                  <span class="status unavailable" title="Let">Let</span>
                 </li>
                 <li>
                   <h4>Unit 02</h4>
                   <span>255m<sup>2</sup> / 2745 sq ft</span>
-                  <span class="status unavailable" title="Available">Under Offer</span>
+                  <span class="status unavailable" title="Let">Let</span>
                 </li>
                 <li>
                   <h4>Unit 03</h4>
@@ -246,7 +246,7 @@
                 <li>
                   <h4>Unit 10</h4>
                   <span>295m<sup>2</sup> / 3175 sq ft</span>
-                  <span class="status unavailable" title="Available">Under Offer</span>
+                  <span class="status available" title="Available">Available</span>
                 </li>
               </ul>
             </div>
