Added link to personal site.

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
             </span>
           </div>
           <div class="text-container">
-            <p class="footer-text">Copyright <a href="http://rees.co.uk">Rees Group</a> 2015 | All Rights Reserved | Site by Merged</p>
+            <p class="footer-text">Copyright <a href="http://rees.co.uk">Rees Group</a> 2015 | All Rights Reserved | Site by <a href="http://taylorre.es">Taylor Rees</a></p>
           </div>
         </footer>
 
